--- a/busstationdistribution/templates/busstationdistribution/base.html
+++ b/busstationdistribution/templates/busstationdistribution/base.html
@@ -39,8 +39,12 @@
         <script src="{% static gentelella_static|add:"datatables.net-responsive/js/dataTables.responsive.min.js" %}"></script>
         <script src="{% static gentelella_static|add:"datatables.net-responsive-bs/js/responsive.bootstrap.js" %}"></script>
         <script src="{% static gentelella_static|add:"datatables.net-scroller/js/dataTables.scroller.min.js" %}"></script>
+
+        <script src="{% static gentelella_static|add:"iCheck/icheck.min.js" %}"></script>
     {% endwith %}
 
+    <script src="{% static "components/echarts/dist/echarts.min.js" %}"></script>
+    <script src="{% static "js/echartsTheme.js" %}"></script>
     <script src="{% static "js/dateRangePickerOpt.js" %}"></script>
     <script src="{% static "js/filterManager.js" %}"></script>
     <script src="{% static "js/availableDays.js" %}"></script>
