--- a/busstationdistribution/templates/busstationdistribution/index.html
+++ b/busstationdistribution/templates/busstationdistribution/index.html
@@ -37,6 +37,10 @@
     {{ block.super }}
     {% with "components/gentelella/vendors/" as gentelella_static %}
         <script src="{% static gentelella_static|add:"jquery-sparkline/dist/jquery.sparkline.min.js" %}"></script>
+
+        <script src="{% static gentelella_static|add:"datatables.net-buttons/js/dataTables.buttons.js" %}"></script>
+        <script src="{% static gentelella_static|add:"datatables.net-buttons/js/buttons.html5.js" %}"></script>
+        <script src="{% static gentelella_static|add:"jszip/dist/jszip.js" %}"></script>
     {% endwith %}
     <script src="{% static "busstationdistribution/js/index.js" %}"></script>
 {% endblock %}
