fixed export button style

--- a/busstationdistribution/templates/busstationdistribution/index.html
+++ b/busstationdistribution/templates/busstationdistribution/index.html
@@ -38,9 +38,9 @@
     {% with "components/gentelella/vendors/" as gentelella_static %}
         <script src="{% static gentelella_static|add:"jquery-sparkline/dist/jquery.sparkline.min.js" %}"></script>
 
-        <script src="{% static gentelella_static|add:"datatables.net-buttons/js/dataTables.buttons.js" %}"></script>
-        <script src="{% static gentelella_static|add:"datatables.net-buttons/js/buttons.html5.js" %}"></script>
+        <script src="{% static gentelella_static|add:"datatables.net-buttons/js/dataTables.buttons.min.js" %}"></script>
         <script src="{% static gentelella_static|add:"jszip/dist/jszip.min.js" %}"></script>
+        <script src="{% static gentelella_static|add:"datatables.net-buttons/js/buttons.html5.min.js" %}"></script>
     {% endwith %}
     <script src="{% static "busstationdistribution/js/index.js" %}"></script>
 {% endblock %}
