added input field to add dates to remove in range filter

--- a/busstationdistribution/templates/busstationdistribution/index.html
+++ b/busstationdistribution/templates/busstationdistribution/index.html
@@ -19,7 +19,7 @@
 
     {% include "datamanager/availableDays.html" with info_target_id="dayHelp" %}
 
-    {% data_filter data_filter True False True False False False False False False False False info_target_id="filterHelp" %}
+    {% data_filter data_filter True False True False False False False False False False False show_exlude_date_filter=True info_target_id="filterHelp" %}
 
     <div class="row">
         {% table "validationDetail" 12 with_checker=False as validationTable %}
