--- a/busstationdistribution/templates/busstationdistribution/base.html
+++ b/busstationdistribution/templates/busstationdistribution/base.html
@@ -3,6 +3,7 @@
 
 {% block css %}
     <link href="{% static "css/filterManager.css" %}" rel="stylesheet">
+    <link href="{% static "components/bootstrap-datepicker/dist/css/bootstrap-datepicker3.min.css" %}" rel="stylesheet">
     {% with "components/gentelella/vendors/" as gentelella_static %}
         <link href="{% static gentelella_static|add:"select2/dist/css/select2.min.css" %}" rel="stylesheet">
         <link href="{% static gentelella_static|add:'bootstrap-daterangepicker/daterangepicker.css' %}" rel="stylesheet">
@@ -32,8 +33,10 @@
 
         <script src="{% static gentelella_static|add:"iCheck/icheck.min.js" %}"></script>
     {% endwith %}
-
+    <script src="{% static "components/bootstrap-datepicker/dist/js/bootstrap-datepicker.js" %}"></script>
+    <script src="{% static "components/bootstrap-datepicker/dist/locales/bootstrap-datepicker.es.min.js" %}"></script>
     <script src="{% static "components/echarts/dist/echarts.min.js" %}"></script>
+
     <script src="{% static "js/echartsTheme.js" %}"></script>
     <script src="{% static "js/dateRangePickerOpt.js" %}"></script>
     <script src="{% static "js/filterManager.js" %}"></script>
