--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -75,7 +75,7 @@
               {% if perms.localinfo.validation %}
               <li><a><i class="fa fa-dollar"></i> Validaciones <span class="fa fa-chevron-down"></span></a>
                 <ul class="nav child_menu">
-                  <li><a href="{% url 'busstationdistribution:index' %}"> Dist. en zona paga</a></li>
+                  <li><a href="{% url 'paymentfactor:index' %}"> Dist. en zona paga</a></li>
                 </ul>
               </li>
               {% endif %}
