--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -82,7 +82,7 @@
               <li><a><i class="fa fa-bus"></i> Perfil de carga <span class="fa fa-chevron-down"></span></a>
                 <ul class="nav child_menu">
                   <li><a href=" {% url "profile:expedition" %} "> Por servicio</a></li>
-                  <li><a href=" {% url "profile:stop" %} "> Por parada</a></li>
+                  <li><a href=" {% url "profile:stop" %} "> Por parada-servicio</a></li>
                   <li><a href=" {% url 'profile:trajectory' %} "> Trayectoria</a></li>
                   <li><a href=" {% url 'profile:transfers' %} "> Transbordos en parada</a></li>
                   <li><a href=" {% url 'profile:odmatrix' %} "> Matriz de etapas</a></li>
