--- a/profile/templates/profile/byExpedition.html
+++ b/profile/templates/profile/byExpedition.html
@@ -15,6 +15,7 @@
 
     {% include "datamanager/availableDays.html" with info_target_id="dayHelp" %}
 
+
     {% data_filter data_filter True False True False False True False True True True True info_target_id="filterHelp" %}
 
     <div class="row">
@@ -32,6 +33,8 @@
     {% include "help/modal/explanation/profile/by_route/filter.html" with modal_id="filterHelp" %}
     {% include "help/modal/explanation/profile/by_route/chart.html" with modal_id="chartHelp" %}
     {% include "help/modal/explanation/profile/by_route/table.html" with modal_id="tableHelp" %}
+    {% include "admin/date_range_modal.html" with modal_id="dateRangeModal" %}
+
     {{ block.super }}
 {% endblock %}
 
@@ -45,4 +48,6 @@
     <script src="{% static "components/BeautifyMarker/leaflet-beautify-marker-icon.js" %}"></script>
     <script src="{% static "trip/js/map.js" %}"></script>
     <script src="{% static "profile/js/byExpedition.js" %}"></script>
+    <script src="{% static "js/dateRangeCalendar.js" %}"></script>
+
 {% endblock %}
