Se agrega modal de calenadrio a estadisticas globales. Se permite cambiar de color y elegir multiples fechas.

--- a/globalstat/templates/globalstat/base.html
+++ b/globalstat/templates/globalstat/base.html
@@ -32,4 +32,6 @@
     <script src="{% static "js/dateRangePickerOpt.js" %}"></script>
     <script src="{% static "js/filterManager.js" %}"></script>
     <script src="{% static "js/availableDays.js" %}"></script>
+    <script src="{% static "js/dateRangeCalendar.js" %}"></script>
+
 {% endblock %}
