Se agrega boton de guardado a modal.

--- a/globalstat/templates/globalstat/resume.html
+++ b/globalstat/templates/globalstat/resume.html
@@ -7,7 +7,7 @@
     {% header "Estadísticas globales por período" %}
 
     {% include "datamanager/availableDays.html" %}
-    {% include "admin/date_range_modal.html" with modal_id="dateRangeModal" %}
+    {% include "admin/date_range_modal.html" with modal_id="dateRangeModal" show_save_button="True" %}
 
 
     {% with subgroup="<br /><div class='btn-group' id='subgroup'></div>" %}
