--- a/templates/help/modal/modal_base.html
+++ b/templates/help/modal/modal_base.html
@@ -21,6 +21,9 @@
                 {% if show_ok_button %}
                     <button type="button" class="btn btn-info" data-dismiss="modal">Aceptar</button>
                 {% endif %}
+                {% if show_save_button %}
+                    <button id="saveButton" type="button" class="btn btn-success" data-dismiss="modal">Guardar</button>
+                {% endif %}
             </div>
         </div>
     </div>
