--- a/templates/admin/date_range_modal.html
+++ b/templates/admin/date_range_modal.html
@@ -7,7 +7,7 @@
     <div class="container col-md-12">
         <div class="row">
             <div class="col-md-3 col-sm-3 col-xs-3"></div>
-            <div class="col-md-9 col-sm-9 col-xs-9">
+            <div class="col-md-8 col-sm-8 col-xs-8">
                 <div class="btn-group btn-group-toggle" role="group" data-toggle="buttons">
                      <label class="btn btn-primary active">
                         <input type="radio" name="options" id="option3" autocomplete="off" checked> Añadir rango
@@ -22,6 +22,9 @@
                         <input type="radio" name="options" id="option2" autocomplete="off"> Eliminar día
                     </label>
                 </div>
+            </div>
+            <div class="col-md-1 col-sm-1 col-xs-1">
+                <button  data-toggle="tooltip" title="Eliminar selección" id="deleteSelection" class="btn btn-danger"><i class="fa fa-trash-o fa-2x"></i></button>
             </div>
         </div>
         <div class="row">
