Se implementa el calendario de forma completa en pestaña de Detalle

--- a/globalstat/templates/globalstat/detail.html
+++ b/globalstat/templates/globalstat/detail.html
@@ -7,6 +7,7 @@
     {% header "Estadísticas globales por día" %}
 
     {% include "datamanager/availableDays.html" %}
+    {% include "admin/date_range_modal.html" with modal_id="dateRangeModal" show_save_button="True" %}
 
     {% data_filter data_filter True show_export_button=False %}
 
