--- a/templates/admin/date_range_modal.html
+++ b/templates/admin/date_range_modal.html
@@ -8,7 +8,7 @@
         <div class="row">
             <div class="col-md-3 col-sm-3 col-xs-3"></div>
             <div class="col-md-8 col-sm-8 col-xs-8">
-                <div class="btn-group btn-group-toggle" role="group" data-toggle="buttons">
+                <div id="group-button" class="btn-group btn-group-toggle" role="group" data-toggle="buttons">
                      <label class="btn btn-primary active">
                         <input type="radio" name="options" id="option3" autocomplete="off" checked> Añadir rango
                     </label>
@@ -24,7 +24,7 @@
                 </div>
             </div>
             <div class="col-md-1 col-sm-1 col-xs-1">
-                <button  data-toggle="tooltip" title="Eliminar selección" id="deleteSelection" class="btn btn-danger"><i class="fa fa-trash-o fa-2x"></i></button>
+                <button data-toggle="tooltip" title="Eliminar selección" id="deleteSelection" class="btn btn-danger"><i class="fa fa-trash-o fa-2x"></i></button>
             </div>
         </div>
         <div class="row">
@@ -32,7 +32,7 @@
         </div>
         <div class="row">
             <div class="col-md-12 col-sm-12 col-xs-12">
-                <dt>Días seleccionados: </dt>
+                <dt id="selectedDaysTitle">Días seleccionados: </dt>
                 <dl id="daysSelectedList" class="dl-horizontal">
                 </dl>
             </div>
