Se agrega a todas las vistas el calendario como selector de fechas.

--- a/paymentfactor/templates/paymentfactor/base.html
+++ b/paymentfactor/templates/paymentfactor/base.html
@@ -6,7 +6,6 @@
     <link href="{% static "components/bootstrap-datepicker/dist/css/bootstrap-datepicker3.min.css" %}" rel="stylesheet">
     {% with "components/gentelella/vendors/" as gentelella_static %}
         <link href="{% static gentelella_static|add:"select2/dist/css/select2.min.css" %}" rel="stylesheet">
-        <link href="{% static gentelella_static|add:'bootstrap-daterangepicker/daterangepicker.css' %}" rel="stylesheet">
 
         <link href="{% static gentelella_static|add:"datatables.net-bs/css/dataTables.bootstrap.min.css" %}" rel="stylesheet">
         <link href="{% static gentelella_static|add:"datatables.net-fixedheader-bs/css/fixedHeader.bootstrap.min.css" %}" rel="stylesheet">
@@ -33,12 +32,12 @@
 
         <script src="{% static gentelella_static|add:"iCheck/icheck.min.js" %}"></script>
     {% endwith %}
-    <script src="{% static "components/bootstrap-datepicker/dist/js/bootstrap-datepicker.js" %}"></script>
-    <script src="{% static "components/bootstrap-datepicker/dist/locales/bootstrap-datepicker.es.min.js" %}"></script>
+
     <script src="{% static "components/echarts/dist/echarts.min.js" %}"></script>
 
     <script src="{% static "js/echartsTheme.js" %}"></script>
-    <script src="{% static "js/dateRangePickerOpt.js" %}"></script>
     <script src="{% static "js/filterManager.js" %}"></script>
     <script src="{% static "js/availableDays.js" %}"></script>
+    <script src="{% static "js/dateRangeCalendar.js" %}"></script>
+
 {% endblock %}
