--- a/paymentfactor/templates/paymentfactor/index.html
+++ b/paymentfactor/templates/paymentfactor/index.html
@@ -18,6 +18,8 @@
     {% header "Distribución de validaciones" "en zona paga mixta" %}
 
     {% include "datamanager/availableDays.html" with info_target_id="dayHelp" %}
+    {% include "admin/date_range_modal.html" with modal_id="dateRangeModal" show_save_button="True" %}
+
 
     {% data_filter data_filter True False True False False False False False False False False show_exlude_date_filter=True info_target_id="filterHelp" %}
 
