--- a/profile/templates/profile/byStop.html
+++ b/profile/templates/profile/byStop.html
@@ -8,6 +8,7 @@
     {% header "Perfil promedio de carga" "por parada-servicio"|add:label %}
 
     {% include "datamanager/availableDays.html" with info_target_id="dayHelp" %}
+    {% include "admin/date_range_modal.html" with modal_id="dateRangeModal" show_save_button="True" %}
 
     {% data_filter data_filter True True True False True False True False False False False info_target_id="filterHelp" %}
 
