--- a/speed/templates/speed/ranking.html
+++ b/speed/templates/speed/ranking.html
@@ -50,6 +50,7 @@
         {% header "Ranking de velocidades" %}
 
         {% include "datamanager/availableDays.html" with info_target_id="dayHelp" %}
+        {% include "admin/date_range_modal.html" with modal_id="dateRangeModal" show_save_button="True" %}
 
         {% data_filter data_filter True False True False False False False False False False False True info_target_id="filterHelp" %}
 
