--- a/templates/admin/date_range_modal.html
+++ b/templates/admin/date_range_modal.html
@@ -32,9 +32,9 @@
         </div>
         <div class="row">
             <div class="col-md-12 col-sm-12 col-xs-12">
-                <dt id="selectedDaysTitle">Días seleccionados: </dt>
-                <dl id="daysSelectedList" class="dl-horizontal">
-                </dl>
+                <h4 id="selectedDaysTitle">Días seleccionados: </h4>
+                <h4 id="daysSelectedList" class="dl-horizontal">
+                </h4>
             </div>
         </div>
     </div>
