--- a/profile/templates/profile/base.html
+++ b/profile/templates/profile/base.html
@@ -23,7 +23,6 @@
 {% block js %}
     {% with "components/gentelella/vendors/" as gentelella_static %}
         <script src="{% static gentelella_static|add:"moment/min/moment-with-locales.min.js" %}"></script>
-        <script src="{% static gentelella_static|add:"bootstrap-daterangepicker/daterangepicker.js" %}"></script>
         <script src="{% static gentelella_static|add:"jquery.tagsinput/src/jquery.tagsinput.js" %}"></script>
         <script src="{% static gentelella_static|add:"select2/dist/js/select2.min.js" %}"></script>
 
@@ -39,10 +38,10 @@
 
     <script src="{% static "components/echarts/dist/echarts.min.js" %}"></script>
     <script src="{% static "components/echarts-wordcloud/dist/echarts-wordcloud.min.js" %}"></script>
-
     <script src="{% static "js/echartsTheme.js" %}"></script>
-    <script src="{% static "js/dateRangePickerOpt.js" %}"></script>
     <script src="{% static "js/filterManager.js" %}"></script>
     <script src="{% static "js/availableDays.js" %}"></script>
+    <script src="{% static "js/dateRangeCalendar.js" %}"></script>
+
 
 {% endblock %}
