--- a/profile/templates/profile/transfers.html
+++ b/profile/templates/profile/transfers.html
@@ -8,6 +8,8 @@
     {% header "Transbordos" "por parada"|add:label %}
 
     {% include "datamanager/availableDays.html" with info_target_id="dayHelp" %}
+    {% include "admin/date_range_modal.html" with modal_id="dateRangeModal" show_save_button="True" %}
+
 
     {% data_filter data_filter True True True False True False True False False False False info_target_id="filterHelp" %}
 
