--- a/speed/templates/speed/variation.html
+++ b/speed/templates/speed/variation.html
@@ -18,6 +18,7 @@
         {% header "Variación de velocidades" "por servicio" %}
 
         {% include "datamanager/availableDays.html" with  info_target_id="dayHelp" %}
+        {% include "admin/date_range_modal.html" with modal_id="dateRangeModal" show_save_button="True" %}
 
         {% data_filter data_filter True False True False False False False False True True False  info_target_id="filterHelp" %}
 
