--- a/trip/templates/trip/base.html
+++ b/trip/templates/trip/base.html
@@ -5,9 +5,6 @@
     <link href="{% static "css/filterManager.css" %}" rel="stylesheet">
     {% with "components/gentelella/vendors/" as gentelella_static %}
         <link href="{% static gentelella_static|add:"select2/dist/css/select2.min.css" %}" rel="stylesheet">
-        <!-- Daterangepicker -->
-        <link href="{% static gentelella_static|add:'bootstrap-daterangepicker/daterangepicker.css' %}"
-              rel="stylesheet">
     {% endwith %}
 {% endblock %}
 
@@ -19,7 +16,6 @@
 {% block js %}
     {% with "components/gentelella/vendors/" as gentelella_static %}
         <script src="{% static gentelella_static|add:"moment/min/moment-with-locales.min.js" %}"></script>
-        <script src="{% static gentelella_static|add:"bootstrap-daterangepicker/daterangepicker.js" %}"></script>
         <script src="{% static gentelella_static|add:"jquery.tagsinput/src/jquery.tagsinput.js" %}"></script>
         <script src="{% static gentelella_static|add:"select2/dist/js/select2.min.js" %}"></script>
     {% endwith %}
@@ -27,7 +23,8 @@
     <script src="{% static "components/echarts/dist/echarts.min.js" %}"></script>
 
     <script src="{% static "js/echartsTheme.js" %}"></script>
-    <script src="{% static "js/dateRangePickerOpt.js" %}"></script>
     <script src="{% static "js/filterManager.js" %}"></script>
     <script src="{% static "js/availableDays.js" %}"></script>
+    <script src="{% static "js/dateRangeCalendar.js" %}"></script>
+
 {% endblock %}
