--- a/trip/templates/trip/from_to.html
+++ b/trip/templates/trip/from_to.html
@@ -19,6 +19,8 @@
     <div class="">
         {% header "Orígenes y destinos" %}
         {% include "datamanager/availableDays.html"  with info_target_id="dayHelp" %}
+        {% include "admin/date_range_modal.html" with modal_id="dateRangeModal" show_save_button="True" %}
+
         {% columns 12 12 12 "<label>Número de etapas:</label><br />"|add:stage_selectors as col1 %}
         {% columns 12 12 12 "<label>Modo de viaje:</label><br />"|add:mode_selectors as col2 %}
         {% with extra_html=col1|add:col2 %}
