Se eliminan los elementos del dashboard que ya no se usarán.

--- a/profile/templates/profile/byManyStops.html
+++ b/profile/templates/profile/byManyStops.html
@@ -8,23 +8,16 @@
     {% header "Subidas y Bajadas" "por paradas"|add:label %}
 
     {% include "datamanager/availableDays.html" with info_target_id="dayHelp" %}
+    {% include "admin/date_range_modal.html" with modal_id="dateRangeModal" show_save_button="True" %}
 
     {% data_filter data_filter True True True False True False True False False False False info_target_id="filterHelp" %}
 
     <div class="row">
-        {% panel "fa-clock-o" "Expediciones por hora de inicio" '<div id="timePeriodChart" style="height:50px;"></div>' as panel1 %}
-        {% columns 12 12 12  panel1 %}
 
         {% panel "fa-bar-chart" "Perfil de carga <small>para <strong id='expeditionNumber'>N</strong> expediciones</small>" '<div id="barChart" style="height:400px;"></div>' info_target_id="chartHelp" as panel4 %}
         {% columns 12 12 12 panel4 %}
     </div>
 
-    <div class="row">
-        <div class="col-md-12 col-sm-12 col-xs-12">
-            {% table "expeditionDetail" 9 as expeditionTable %}
-            {% panel "fa-truck" "Expediciones (<strong id='expeditionNumber2'>N</strong>)" expeditionTable info_target_id="tableHelp" %}
-        </div>
-    </div>
 
     {% include "help/modal/explanation/profile/by_stop/filter.html" with modal_id="filterHelp" %}
     {% include "help/modal/explanation/profile/by_stop/chart.html" with modal_id="chartHelp" %}
@@ -34,5 +27,5 @@
 
 {% block js %}
     {{ block.super }}
-    <script src="{% static "profile/js/byStop.js" %}"></script>
+    <script src="{% static "profile/js/byManyStops.js" %}"></script>
 {% endblock %}
