--- a/profile/templates/profile/byManyStops.html
+++ b/profile/templates/profile/byManyStops.html
@@ -10,11 +10,11 @@
     {% include "datamanager/availableDays.html" with info_target_id="dayHelp" %}
     {% include "admin/date_range_modal.html" with modal_id="dateRangeModal" show_save_button="True" %}
 
-    {% data_filter data_filter True True True False True False True False False False False info_target_id="filterHelp" %}
+    {% data_filter data_filter True False True False True False True False False False False False False False False False Flase True info_target_id="filterHelp" %}
 
     <div class="row">
 
-        {% panel "fa-bar-chart" "Perfil de carga <small>para <strong id='expeditionNumber'>N</strong> expediciones</small>" '<div id="barChart" style="height:400px;"></div>' info_target_id="chartHelp" as panel4 %}
+        {% panel "fa-bar-chart" "Subidas y bajadas" '<div id="barChart" style="height:400px;"></div>' info_target_id="chartHelp" as panel4 %}
         {% columns 12 12 12 panel4 %}
     </div>
 
