Se despliegan los días disponibles en la vista Transacciones por Operador

--- a/bip/templates/bip/byOperator.html
+++ b/bip/templates/bip/byOperator.html
@@ -32,6 +32,5 @@
     <script src="{% static "components/leaflet/dist/leaflet.js" %}"></script>
     <script src="{% static "components/leaflet-polylinedecorator/dist/leaflet.polylineDecorator.js" %}"></script>
     <script src="{% static "components/BeautifyMarker/leaflet-beautify-marker-icon.js" %}"></script>
-    <script src="{% static "trip/js/map.js" %}"></script>
-    <script src="{% static "profile/js/byExpedition.js" %}"></script>
+    <script src="{% static "profile/js/byOperator.js" %}"></script>
 {% endblock %}
