--- a/bip/templates/bip/byOperator.html
+++ b/bip/templates/bip/byOperator.html
@@ -17,7 +17,11 @@
     {% include "admin/date_range_modal.html" with modal_id="dateRangeModal" show_save_button="True" %}
 
     {% data_filter data_filter True False info_target_id="filterHelp" %}
-
+    <div class="row">
+        <div class="col-md-12 col-sm-12 col-xs-12">
+            {% panel "" "" '<div id="barChart" style="height:400px;"></div>' %}
+        </div>
+    </div>
     {% include "help/modal/explanation/profile/by_route/filter.html" with modal_id="filterHelp" %}
     {% include "help/modal/explanation/profile/by_route/chart.html" with modal_id="chartHelp" %}
     {% include "help/modal/explanation/profile/by_route/table.html" with modal_id="tableHelp" %}
