--- a/bip/templates/bip/byOperator.html
+++ b/bip/templates/bip/byOperator.html
@@ -36,5 +36,5 @@
     <script src="{% static "components/leaflet/dist/leaflet.js" %}"></script>
     <script src="{% static "components/leaflet-polylinedecorator/dist/leaflet.polylineDecorator.js" %}"></script>
     <script src="{% static "components/BeautifyMarker/leaflet-beautify-marker-icon.js" %}"></script>
-    <script src="{% static "profile/js/byOperator.js" %}"></script>
+    <script src="{% static "bip/js/byOperator.js" %}"></script>
 {% endblock %}
