Refactoring y se agrega información de servicio transantiago.

--- a/templates/help/modal/explanation/trip/fromto/filter.html
+++ b/templates/help/modal/explanation/trip/fromto/filter.html
@@ -9,4 +9,5 @@
     {% include 'help/modal/filters/boarding_halfhour.html' %}
     {% include 'help/modal/filters/stage_selector2.html' %}
     {% include 'help/modal/filters/transport_mode_selector.html' %}
+    {% include 'help/modal/filters/auth_route.html' %}
 {% endblock body %}
