Se agrega consulta a elasticsearch.

--- a/templates/help/modal/explanation/trip/strategies/filter.html
+++ b/templates/help/modal/explanation/trip/strategies/filter.html
@@ -8,4 +8,5 @@
     {% include 'help/modal/filters/boarding_period.html' %}
     {% include 'help/modal/filters/boarding_halfhour.html' %}
     {% include 'help/modal/filters/map_origin_destination.html' %}
+    {% include 'help/modal/filters/auth_route.html' %}
 {% endblock body %}
