--- a/templates/help/modal/explanation/bip/by_operator/chart.html
+++ b/templates/help/modal/explanation/bip/by_operator/chart.html
@@ -3,12 +3,12 @@
 {% block title %}Perfil de carga{% endblock title %}
 
 {% block body %}
-    <p>Este panel muestra un gráfico con varios puntos de información. El título del gráfico es “PTransacciones por oper
-        ador”. El eje horizontal muestra los días seleccionados. El eje vertical muestra las transaccioones realizadas
-        en el día, donde cada linea representa a un operador distinto.
+    <p>Este panel muestra un gráfico con varios puntos de información. El título del gráfico es “Transacciones por
+        operador”. El eje horizontal muestra los días seleccionados y el eje vertical muestra las transaccioones
+        realizadas en el día, donde cada línea representa un operador distinto.
     </p>
-    <p> Debajo del gráfico aparecen tres botones para guardar la imagen, ver los datos como texto, y cambiar el
-        porcentaje máximo del eje vertical derecho.
+    <p> Debajo del gráfico aparecen tres botones: guardar la imagen, ver los datos y cambiar el porcentaje máximo del
+        eje vertical derecho.
     </p>
 
 {% endblock body %}
