Se modifica información de filtro.

--- a/templates/help/modal/filters/auth_route_selector.html
+++ b/templates/help/modal/filters/auth_route_selector.html
@@ -1,4 +1,4 @@
 <dl class="dl-horizontal">
     <dt>Servicio transantiago</dt>
-    <dd>Lista de servicios disponibles según operador y servicio usuario seleccionados previamente</dd>
+    <dd>El usuario puede seleccionar uno o más servicios con código transantiago de la lista desplegada.</dd>
 </dl>
