Se crea modelo inicial y vista inicial en administración.

--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -60,6 +60,7 @@
                       <li><a href="{% url 'admin:localinfo_calendarinfo_changelist' %}">Asignar días al calendario</a></li>
                     </ul>
                   </li>
+                  <li><a href="{% url 'admin:localinfo_customroute_changelist' %}">Diccionario de servicios</a></li>
                 </ul>
               </li>
               {% endif %}
