--- a/templates/admin/localinfo/faq/change_form.html
+++ b/templates/admin/localinfo/faq/change_form.html
@@ -89,24 +89,68 @@
 {# JavaScript for prepopulated fields #}
 {% prepopulated_fields_js %}
  <script>
-    addEventListener("trix-attachment-add", function(event) {
-        if (event.attachment.file) {
-          console.log(document.querySelector("trix-editor"));
-          var attachment = event.attachment;
-          var editor = event.target.editor;
-          var range = editor.getDocument().getRangeOfAttachment(attachment);
-          console.log("attachment range:", range);
-          var attributes = {
-              url: "HOST" + "key",
-              href: "HOST" + "key" + "?content-disposition=attachment"
-          };
-          attachment.setAttributes(attributes)
+    var HOST = "{% url 'localinfo:faqUpload' %}";
 
-          //var element = document.querySelector("trix-editor");
-          //element.editor.setSelectedRange([0, 0]);
-          //element.editor.insertFile(attachment.file);
-        }
-    });
+addEventListener("trix-attachment-add", function(event) {
+    if (event.attachment.file) {
+        uploadFileAttachment(event.attachment);
+    }
+});
+
+function uploadFileAttachment(attachment) {
+    uploadFile(attachment.file, setProgress, setAttributes);
+
+    function setProgress(progress) {
+        attachment.setUploadProgress(progress);
+    }
+
+    function setAttributes(attributes) {
+        attachment.setAttributes(attributes);
+    }
+}
+
+function uploadFile(file, progressCallback, successCallback) {
+    var key = createStorageKey(file);
+    var formData = createFormData(key, file);
+    var xhr = new XMLHttpRequest();
+
+xhr.open("POST", HOST, true);
+
+xhr.upload.addEventListener("progress", function(event) {
+    var progress = event.loaded / event.total * 100;
+    progressCallback(progress);
+});
+
+xhr.addEventListener("load", function(event) {
+    if (xhr.status === 204) {
+        console.log(xhr);
+        var attributes = {
+            url: HOST + key,
+            href: HOST + key + "?content-disposition=attachment"
+        };
+        successCallback(attributes);
+    } else {
+        alert("fallo");
+    }
+});
+
+xhr.send(formData)
+}
+
+function createStorageKey(file) {
+    var date = new Date();
+    var day = date.toISOString().slice(0,10);
+    var name = date.getTime() + "-" + file.name;
+    return [ "tmp", day, name ].join("/");
+}
+
+function createFormData(key, file) {
+    var data = new FormData();
+    data.append("key", key);
+    data.append("Content-Type", file.type);
+    data.append("file", file);
+return data
+}
     </script>
       </div>
     </form>
