--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -197,6 +197,11 @@
                 </li>
               </ul>
             </li>
+            <li>
+              <a href="{% url 'localinfo:faq' %}" >
+                  <i class="fa fa-question-circle-o fa-5x"></i>
+              </a>
+            </li>
           </ul>
         </nav>
       </div>
