--- a/templates/admin/localinfo/faq/change_form.html
+++ b/templates/admin/localinfo/faq/change_form.html
@@ -125,11 +125,10 @@ xhr.addEventListener("load", function(event) {
     if (xhr.status === 200) {
         console.log(xhr);
         let response = JSON.parse(xhr.response);
-        //let url = window.location.origin + "/" + response["url"] + "/" + response["name"];
-        let name = response["name"];
+        let url = window.location.origin + "/" + response["url"] + "/" + response["name"];
         let attributes = {
-            url: {% static "" %}  + name,
-            href: {% static "" %}  + name + "?content-disposition=attachment"
+            url: url,
+            href: url + "?content-disposition=attachment"
         };
         successCallback(attributes);
     } else {
